Fix hero container height and bottom alignment

--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -4,8 +4,8 @@
 
 .hero-block {
 	width: 100% !important;
-	min-height: 130vh !important;
-	min-height: 130svh !important;
+	min-height: 110vh !important;
+	min-height: 110svh !important;
 	background-size: cover !important;
 	background-position: center !important;
 	background-repeat: no-repeat !important;
@@ -20,15 +20,15 @@
 
 	// Tablet (1024px)
 	@include lg {
-		min-height: 130vh !important;
-		min-height: 130svh !important;
+		min-height: 110vh !important;
+		min-height: 110svh !important;
 		background-image: url('https://global-travelsolutions.com/wp-content/uploads/2026/01/1024-banner-home_result.webp') !important;
 	}
 
 	// Mobile (375px)
 	@include md {
-		min-height: 130vh !important;
-		min-height: 130svh !important;
+		min-height: 110vh !important;
+		min-height: 110svh !important;
 		background-image: url('https://global-travelsolutions.com/wp-content/uploads/2026/01/hero-banner-375_result.webp') !important;
 	}
 }
@@ -44,7 +44,6 @@
 	padding: 0 20px;
 	min-height: 100%;
 	height: 100%;
-	max-height: 100%;
 	box-sizing: border-box;
 
 	@include lg {
@@ -369,11 +368,12 @@
 	margin-left: auto;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start; // Форма стартует сверху и не уходит под хедер
+	justify-content: flex-end; // Форма и world-map прижаты к низу hero
 	padding-top: calc(var(--site-header-height, 72px) + 16px);
 	padding-bottom: 20px;
 	box-sizing: border-box;
-	min-height: auto;
+	min-height: 100%;
+	align-self: stretch;
 
 	@include lg {
 		width: 390px;
